@@ -350,6 +350,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6455: Fixed test_build_ext under win32. 
+
 - Issue #6377: Enabled the compiler option, and deprecate its usage as an 
   attribute.
 
